--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 drf-spectacular==0.23.1
 executing==1.0.0
+Faker==14.1.0
 gunicorn==20.1.0
 inflection==0.5.1
 ipdb==0.13.9
