--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,15 @@ attrs==22.1.0
 backcall==0.2.0
 black==22.8.0
 click==8.1.3
+colorama==0.4.5
 decorator==5.1.1
 dj-database-url==1.0.0
 Django==4.1.1
+django-filter==22.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 drf-spectacular==0.23.1
 executing==1.0.0
-Faker==14.1.0
 gunicorn==20.1.0
 inflection==0.5.1
 ipdb==0.13.9
@@ -42,5 +43,6 @@ stack-data==0.5.0
 toml==0.10.2
 tomli==2.0.1
 traitlets==5.3.0
+tzdata==2022.2
 uritemplate==4.1.1
 wcwidth==0.2.5
