--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ backcall==0.2.0
 black==22.8.0
 click==8.1.3
 colorama==0.4.5
+coverage==6.4.4
 decorator==5.1.1
 dj-database-url==1.0.0
 Django==4.1.1
@@ -13,6 +14,7 @@ djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 drf-spectacular==0.23.1
 executing==1.0.0
+Faker==14.1.0
 gunicorn==20.1.0
 inflection==0.5.1
 ipdb==0.13.9
@@ -34,6 +36,7 @@ pure-eval==0.2.2
 Pygments==2.13.0
 PyJWT==2.4.0
 pyrsistent==0.18.1
+python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.2.1
 PyYAML==6.0
